# Autonomous-Drone

./: .gitignore  README.md
src/controller_pkg/: CMakeLists.txt
src/controller_pkg/launch/: controller.launch  explore.launch
src/controller_pkg/src/: controller_node.cpp  explore.cpp  move2cave.cpp  rotate_in_place.cpp  state_machine.cpp  traj_publisher.cpp  turn.cpp
src/filter/: CMakeLists.txt  README.md  package.xml
src/filter/launch/: filter.launch
src/filter/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  offline_map.pgm  offline_map.yaml
src/filter/src/: filter_node.cpp
src/find_goal/: CMakeLists.txt  package.xml
src/find_goal/launch/: find_goal.launch
src/find_goal/src/: find_goal.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/include/path_planner/: a_star.hpp  path_generator.h
src/path_planner/launch/: path_planner.launch
src/path_planner/src/: a_star.cpp  path_generator.cpp
src/semantic_image_proc/: CMakeLists.txt  package.xml
src/semantic_image_proc/launch/: semantic_image_proc.launch
src/semantic_image_proc/src/: image_viewer.cpp  lantern_detector.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/launch/: Robodog.rviz  simulation.launch  unity_ros.launch
src/simulation/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  offline_map.yaml
src/simulation/src/: point_cloud_rotation.cpp
